syntax = "proto3";

package pb;
import "rpc_chat_gpt.proto";

option go_package = "github.com/onepiece010938/go-line-message-analyzer/pb";

service OpenAi{
    rpc ChatGpt (ChatGptRequest) returns (ChatGptReply){}
} 